<resources>
    <string name="app_name">SimpleCoin</string>
    <string name="create_wallet">Create wallet</string>
    <string name="no_network_connection">No network connection</string>
    <string name="coin">coin</string>
    <string name="send">Send</string>
    <string name="receive">Receive</string>
    <string name="history">History</string>
    <string name="describe_receive_money">My public address to receive funds</string>
    <string name="receiver">Receiver</string>
    <string name="amount">Amount</string>
    <string name="message">Message</string>
    <string name="transaction_success">Transaction success</string>
    <string name="sender">Sender</string>
    <string name="me">Me</string>
    <string name="no_transaction">No Transaction</string>
</resources>
