<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".ui.sendcoin.SendCoinActivity">

    <LinearLayout
        android:id="@+id/layoutReceiver"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp">

        <TextView
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0.5"
            android:text="@string/receiver"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/etReceiver"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutAmount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp">

        <TextView
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0.5"
            android:text="@string/amount"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/etAmount"
            android:inputType="number"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp">

        <TextView
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0.5"
            android:text="@string/message"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/etMessage"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5" />
    </LinearLayout>

    <Button
        android:id="@+id/btnSend"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_background"
        android:text="@string/send"
        android:textColor="#ffffff" />

</LinearLayout>